# serializer version: 1
# name: test_npse_iid_inference_snapshot[auto_gauss-ode-None_prior-dim_3-subvp]
  list([
    list([
      -0.9198087453842163,
      -0.03226412460207939,
    ]),
    list([
      -1.2253586053848267,
      -0.5765306949615479,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[auto_gauss-ode-None_prior-dim_3-ve]
  list([
    list([
      -0.9534644484519958,
      -0.2797377109527588,
    ]),
    list([
      -1.2012022733688354,
      -0.8256365060806274,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[auto_gauss-ode-None_prior-dim_3-vp]
  list([
    list([
      -0.4981342852115631,
      -0.8204771280288696,
    ]),
    list([
      -1.3586816787719727,
      -0.8610840439796448,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[auto_gauss-ode-gaussian_prior-dim_1-vp0]
  list([
    list([
      0.04802143573760986,
    ]),
    list([
      -0.13500557839870453,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[auto_gauss-ode-gaussian_prior-dim_1-vp1]
  list([
    list([
      0.04802143573760986,
    ]),
    list([
      -0.13500557839870453,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[auto_gauss-ode-gaussian_prior-dim_2-subvp]
  list([
    list([
      -0.9198087453842163,
      -0.03226412460207939,
    ]),
    list([
      -1.2253586053848267,
      -0.5765306949615479,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[auto_gauss-ode-gaussian_prior-dim_2-ve]
  list([
    list([
      -0.9534644484519958,
      -0.2797377109527588,
    ]),
    list([
      -1.2012022733688354,
      -0.8256365060806274,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[auto_gauss-ode-gaussian_prior-dim_2-vp]
  list([
    list([
      -0.4981342852115631,
      -0.8204771280288696,
    ]),
    list([
      -1.3586816787719727,
      -0.8610840439796448,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[auto_gauss-ode-uniform_prior-dim_3-subvp]
  list([
    list([
      0.5026171803474426,
      -0.14688342809677124,
      0.19819878041744232,
    ]),
    list([
      0.8101956844329834,
      0.9525981545448303,
      0.03972509503364563,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[auto_gauss-ode-uniform_prior-dim_3-ve]
  list([
    list([
      0.6304304599761963,
      -0.6617138385772705,
      0.1326000690460205,
    ]),
    list([
      0.8797309398651123,
      0.6335045695304871,
      -0.022958669811487198,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[auto_gauss-ode-uniform_prior-dim_3-vp]
  list([
    list([
      0.2415347695350647,
      -0.1564069241285324,
      0.1062876507639885,
    ]),
    list([
      -0.10485473275184631,
      0.3475174605846405,
      -0.07742819935083389,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[auto_gauss-sde-None_prior-dim_3-subvp]
  list([
    list([
      -0.26416945457458496,
      -0.5380855202674866,
    ]),
    list([
      -0.9131697416305542,
      -0.3601299524307251,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[auto_gauss-sde-None_prior-dim_3-ve]
  list([
    list([
      -0.6600239276885986,
      -0.8042313456535339,
    ]),
    list([
      -0.5148065686225891,
      -0.7849245667457581,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[auto_gauss-sde-None_prior-dim_3-vp]
  list([
    list([
      -0.7121580243110657,
      -0.9239912629127502,
    ]),
    list([
      -1.3291730880737305,
      -0.42849549651145935,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[auto_gauss-sde-gaussian_prior-dim_1-vp0]
  list([
    list([
      0.0026113521307706833,
    ]),
    list([
      -0.1795785129070282,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[auto_gauss-sde-gaussian_prior-dim_1-vp1]
  list([
    list([
      0.0026113521307706833,
    ]),
    list([
      -0.1795785129070282,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[auto_gauss-sde-gaussian_prior-dim_2-subvp]
  list([
    list([
      -0.26416945457458496,
      -0.5380855202674866,
    ]),
    list([
      -0.9131697416305542,
      -0.3601299524307251,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[auto_gauss-sde-gaussian_prior-dim_2-ve]
  list([
    list([
      -0.6600239276885986,
      -0.8042313456535339,
    ]),
    list([
      -0.5148065686225891,
      -0.7849245667457581,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[auto_gauss-sde-gaussian_prior-dim_2-vp]
  list([
    list([
      -0.7121580243110657,
      -0.9239912629127502,
    ]),
    list([
      -1.3291730880737305,
      -0.42849549651145935,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[auto_gauss-sde-uniform_prior-dim_3-subvp]
  list([
    list([
      -0.1743609607219696,
      -0.21850894391536713,
      0.07176153361797333,
    ]),
    list([
      0.296996533870697,
      -0.25024330615997314,
      -0.12501412630081177,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[auto_gauss-sde-uniform_prior-dim_3-ve]
  list([
    list([
      -0.17165498435497284,
      -1.066346526145935,
      -0.19592738151550293,
    ]),
    list([
      0.17051002383232117,
      -1.7759748697280884,
      -0.12025851756334305,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[auto_gauss-sde-uniform_prior-dim_3-vp]
  list([
    list([
      0.0633796900510788,
      -1.141589641571045,
      -0.11582185328006744,
    ]),
    list([
      0.42771634459495544,
      -0.5370681881904602,
      0.23705551028251648,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[fnpe-ode-None_prior-dim_3-subvp]
  list([
    list([
      -0.9198087453842163,
      -0.03226412460207939,
    ]),
    list([
      -1.2253586053848267,
      -0.5765306949615479,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[fnpe-ode-None_prior-dim_3-ve]
  list([
    list([
      -0.9534644484519958,
      -0.2797377109527588,
    ]),
    list([
      -1.2012022733688354,
      -0.8256365060806274,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[fnpe-ode-None_prior-dim_3-vp]
  list([
    list([
      -0.4981342852115631,
      -0.8204771280288696,
    ]),
    list([
      -1.3586816787719727,
      -0.8610840439796448,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[fnpe-ode-gaussian_prior-dim_1-vp0]
  list([
    list([
      0.04802143573760986,
    ]),
    list([
      -0.13500557839870453,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[fnpe-ode-gaussian_prior-dim_1-vp1]
  list([
    list([
      0.04802143573760986,
    ]),
    list([
      -0.13500557839870453,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[fnpe-ode-gaussian_prior-dim_2-subvp]
  list([
    list([
      -0.9198087453842163,
      -0.03226412460207939,
    ]),
    list([
      -1.2253586053848267,
      -0.5765306949615479,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[fnpe-ode-gaussian_prior-dim_2-ve]
  list([
    list([
      -0.9534644484519958,
      -0.2797377109527588,
    ]),
    list([
      -1.2012022733688354,
      -0.8256365060806274,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[fnpe-ode-gaussian_prior-dim_2-vp]
  list([
    list([
      -0.4981342852115631,
      -0.8204771280288696,
    ]),
    list([
      -1.3586816787719727,
      -0.8610840439796448,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[fnpe-ode-uniform_prior-dim_3-subvp]
  list([
    list([
      0.5026171803474426,
      -0.14688342809677124,
      0.19819878041744232,
    ]),
    list([
      0.8101956844329834,
      0.9525981545448303,
      0.03972509503364563,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[fnpe-ode-uniform_prior-dim_3-ve]
  list([
    list([
      0.6304304599761963,
      -0.6617138385772705,
      0.1326000690460205,
    ]),
    list([
      0.8797309398651123,
      0.6335045695304871,
      -0.022958669811487198,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[fnpe-ode-uniform_prior-dim_3-vp]
  list([
    list([
      0.2415347695350647,
      -0.1564069241285324,
      0.1062876507639885,
    ]),
    list([
      -0.10485473275184631,
      0.3475174605846405,
      -0.07742819935083389,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[fnpe-sde-None_prior-dim_3-subvp]
  list([
    list([
      -0.26416945457458496,
      -0.5380855202674866,
    ]),
    list([
      -0.9131697416305542,
      -0.3601299524307251,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[fnpe-sde-None_prior-dim_3-ve]
  list([
    list([
      -0.6600239276885986,
      -0.8042313456535339,
    ]),
    list([
      -0.5148065686225891,
      -0.7849245667457581,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[fnpe-sde-None_prior-dim_3-vp]
  list([
    list([
      -0.7121580243110657,
      -0.9239912629127502,
    ]),
    list([
      -1.3291730880737305,
      -0.42849549651145935,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[fnpe-sde-gaussian_prior-dim_1-vp0]
  list([
    list([
      0.0026113521307706833,
    ]),
    list([
      -0.1795785129070282,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[fnpe-sde-gaussian_prior-dim_1-vp1]
  list([
    list([
      0.0026113521307706833,
    ]),
    list([
      -0.1795785129070282,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[fnpe-sde-gaussian_prior-dim_2-subvp]
  list([
    list([
      -0.26416945457458496,
      -0.5380855202674866,
    ]),
    list([
      -0.9131697416305542,
      -0.3601299524307251,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[fnpe-sde-gaussian_prior-dim_2-ve]
  list([
    list([
      -0.6600239276885986,
      -0.8042313456535339,
    ]),
    list([
      -0.5148065686225891,
      -0.7849245667457581,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[fnpe-sde-gaussian_prior-dim_2-vp]
  list([
    list([
      -0.7121580243110657,
      -0.9239912629127502,
    ]),
    list([
      -1.3291730880737305,
      -0.42849549651145935,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[fnpe-sde-uniform_prior-dim_3-subvp]
  list([
    list([
      -0.1743609607219696,
      -0.21850894391536713,
      0.07176153361797333,
    ]),
    list([
      0.296996533870697,
      -0.25024330615997314,
      -0.12501412630081177,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[fnpe-sde-uniform_prior-dim_3-ve]
  list([
    list([
      -0.17165498435497284,
      -1.066346526145935,
      -0.19592738151550293,
    ]),
    list([
      0.17051002383232117,
      -1.7759748697280884,
      -0.12025851756334305,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[fnpe-sde-uniform_prior-dim_3-vp]
  list([
    list([
      0.0633796900510788,
      -1.141589641571045,
      -0.11582185328006744,
    ]),
    list([
      0.42771634459495544,
      -0.5370681881904602,
      0.23705551028251648,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[gauss-ode-None_prior-dim_3-subvp]
  list([
    list([
      -0.9198087453842163,
      -0.03226412460207939,
    ]),
    list([
      -1.2253586053848267,
      -0.5765306949615479,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[gauss-ode-None_prior-dim_3-ve]
  list([
    list([
      -0.9534644484519958,
      -0.2797377109527588,
    ]),
    list([
      -1.2012022733688354,
      -0.8256365060806274,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[gauss-ode-None_prior-dim_3-vp]
  list([
    list([
      -0.4981342852115631,
      -0.8204771280288696,
    ]),
    list([
      -1.3586816787719727,
      -0.8610840439796448,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[gauss-ode-gaussian_prior-dim_1-vp0]
  list([
    list([
      0.04802143573760986,
    ]),
    list([
      -0.13500557839870453,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[gauss-ode-gaussian_prior-dim_1-vp1]
  list([
    list([
      0.04802143573760986,
    ]),
    list([
      -0.13500557839870453,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[gauss-ode-gaussian_prior-dim_2-subvp]
  list([
    list([
      -0.9198087453842163,
      -0.03226412460207939,
    ]),
    list([
      -1.2253586053848267,
      -0.5765306949615479,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[gauss-ode-gaussian_prior-dim_2-ve]
  list([
    list([
      -0.9534644484519958,
      -0.2797377109527588,
    ]),
    list([
      -1.2012022733688354,
      -0.8256365060806274,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[gauss-ode-gaussian_prior-dim_2-vp]
  list([
    list([
      -0.4981342852115631,
      -0.8204771280288696,
    ]),
    list([
      -1.3586816787719727,
      -0.8610840439796448,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[gauss-ode-uniform_prior-dim_3-subvp]
  list([
    list([
      0.5026171803474426,
      -0.14688342809677124,
      0.19819878041744232,
    ]),
    list([
      0.8101956844329834,
      0.9525981545448303,
      0.03972509503364563,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[gauss-ode-uniform_prior-dim_3-ve]
  list([
    list([
      0.6304304599761963,
      -0.6617138385772705,
      0.1326000690460205,
    ]),
    list([
      0.8797309398651123,
      0.6335045695304871,
      -0.022958669811487198,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[gauss-ode-uniform_prior-dim_3-vp]
  list([
    list([
      0.2415347695350647,
      -0.1564069241285324,
      0.1062876507639885,
    ]),
    list([
      -0.10485473275184631,
      0.3475174605846405,
      -0.07742819935083389,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[gauss-sde-None_prior-dim_3-subvp]
  list([
    list([
      -0.26416945457458496,
      -0.5380855202674866,
    ]),
    list([
      -0.9131697416305542,
      -0.3601299524307251,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[gauss-sde-None_prior-dim_3-ve]
  list([
    list([
      -0.6600239276885986,
      -0.8042313456535339,
    ]),
    list([
      -0.5148065686225891,
      -0.7849245667457581,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[gauss-sde-None_prior-dim_3-vp]
  list([
    list([
      -0.7121580243110657,
      -0.9239912629127502,
    ]),
    list([
      -1.3291730880737305,
      -0.42849549651145935,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[gauss-sde-gaussian_prior-dim_1-vp0]
  list([
    list([
      0.0026113521307706833,
    ]),
    list([
      -0.1795785129070282,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[gauss-sde-gaussian_prior-dim_1-vp1]
  list([
    list([
      0.0026113521307706833,
    ]),
    list([
      -0.1795785129070282,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[gauss-sde-gaussian_prior-dim_2-subvp]
  list([
    list([
      -0.26416945457458496,
      -0.5380855202674866,
    ]),
    list([
      -0.9131697416305542,
      -0.3601299524307251,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[gauss-sde-gaussian_prior-dim_2-ve]
  list([
    list([
      -0.6600239276885986,
      -0.8042313456535339,
    ]),
    list([
      -0.5148065686225891,
      -0.7849245667457581,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[gauss-sde-gaussian_prior-dim_2-vp]
  list([
    list([
      -0.7121580243110657,
      -0.9239912629127502,
    ]),
    list([
      -1.3291730880737305,
      -0.42849549651145935,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[gauss-sde-uniform_prior-dim_3-subvp]
  list([
    list([
      -0.1743609607219696,
      -0.21850894391536713,
      0.07176153361797333,
    ]),
    list([
      0.296996533870697,
      -0.25024330615997314,
      -0.12501412630081177,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[gauss-sde-uniform_prior-dim_3-ve]
  list([
    list([
      -0.17165498435497284,
      -1.066346526145935,
      -0.19592738151550293,
    ]),
    list([
      0.17051002383232117,
      -1.7759748697280884,
      -0.12025851756334305,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[gauss-sde-uniform_prior-dim_3-vp]
  list([
    list([
      0.0633796900510788,
      -1.141589641571045,
      -0.11582185328006744,
    ]),
    list([
      0.42771634459495544,
      -0.5370681881904602,
      0.23705551028251648,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[jac_gauss-ode-None_prior-dim_3-subvp]
  list([
    list([
      -0.9198087453842163,
      -0.03226412460207939,
    ]),
    list([
      -1.2253586053848267,
      -0.5765306949615479,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[jac_gauss-ode-None_prior-dim_3-ve]
  list([
    list([
      -0.9534644484519958,
      -0.2797377109527588,
    ]),
    list([
      -1.2012022733688354,
      -0.8256365060806274,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[jac_gauss-ode-None_prior-dim_3-vp]
  list([
    list([
      -0.4981342852115631,
      -0.8204771280288696,
    ]),
    list([
      -1.3586816787719727,
      -0.8610840439796448,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[jac_gauss-ode-gaussian_prior-dim_1-vp0]
  list([
    list([
      0.04802143573760986,
    ]),
    list([
      -0.13500557839870453,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[jac_gauss-ode-gaussian_prior-dim_1-vp1]
  list([
    list([
      0.04802143573760986,
    ]),
    list([
      -0.13500557839870453,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[jac_gauss-ode-gaussian_prior-dim_2-subvp]
  list([
    list([
      -0.9198087453842163,
      -0.03226412460207939,
    ]),
    list([
      -1.2253586053848267,
      -0.5765306949615479,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[jac_gauss-ode-gaussian_prior-dim_2-ve]
  list([
    list([
      -0.9534644484519958,
      -0.2797377109527588,
    ]),
    list([
      -1.2012022733688354,
      -0.8256365060806274,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[jac_gauss-ode-gaussian_prior-dim_2-vp]
  list([
    list([
      -0.4981342852115631,
      -0.8204771280288696,
    ]),
    list([
      -1.3586816787719727,
      -0.8610840439796448,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[jac_gauss-ode-uniform_prior-dim_3-subvp]
  list([
    list([
      0.5026171803474426,
      -0.14688342809677124,
      0.19819878041744232,
    ]),
    list([
      0.8101956844329834,
      0.9525981545448303,
      0.03972509503364563,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[jac_gauss-ode-uniform_prior-dim_3-ve]
  list([
    list([
      0.6304304599761963,
      -0.6617138385772705,
      0.1326000690460205,
    ]),
    list([
      0.8797309398651123,
      0.6335045695304871,
      -0.022958669811487198,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[jac_gauss-ode-uniform_prior-dim_3-vp]
  list([
    list([
      0.2415347695350647,
      -0.1564069241285324,
      0.1062876507639885,
    ]),
    list([
      -0.10485473275184631,
      0.3475174605846405,
      -0.07742819935083389,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[jac_gauss-sde-None_prior-dim_3-subvp]
  list([
    list([
      -0.26416945457458496,
      -0.5380855202674866,
    ]),
    list([
      -0.9131697416305542,
      -0.3601299524307251,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[jac_gauss-sde-None_prior-dim_3-ve]
  list([
    list([
      -0.6600239276885986,
      -0.8042313456535339,
    ]),
    list([
      -0.5148065686225891,
      -0.7849245667457581,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[jac_gauss-sde-None_prior-dim_3-vp]
  list([
    list([
      -0.7121580243110657,
      -0.9239912629127502,
    ]),
    list([
      -1.3291730880737305,
      -0.42849549651145935,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[jac_gauss-sde-gaussian_prior-dim_1-vp0]
  list([
    list([
      0.0026113521307706833,
    ]),
    list([
      -0.1795785129070282,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[jac_gauss-sde-gaussian_prior-dim_1-vp1]
  list([
    list([
      0.0026113521307706833,
    ]),
    list([
      -0.1795785129070282,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[jac_gauss-sde-gaussian_prior-dim_2-subvp]
  list([
    list([
      -0.26416945457458496,
      -0.5380855202674866,
    ]),
    list([
      -0.9131697416305542,
      -0.3601299524307251,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[jac_gauss-sde-gaussian_prior-dim_2-ve]
  list([
    list([
      -0.6600239276885986,
      -0.8042313456535339,
    ]),
    list([
      -0.5148065686225891,
      -0.7849245667457581,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[jac_gauss-sde-gaussian_prior-dim_2-vp]
  list([
    list([
      -0.7121580243110657,
      -0.9239912629127502,
    ]),
    list([
      -1.3291730880737305,
      -0.42849549651145935,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[jac_gauss-sde-uniform_prior-dim_3-subvp]
  list([
    list([
      -0.1743609607219696,
      -0.21850894391536713,
      0.07176153361797333,
    ]),
    list([
      0.296996533870697,
      -0.25024330615997314,
      -0.12501412630081177,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[jac_gauss-sde-uniform_prior-dim_3-ve]
  list([
    list([
      -0.17165498435497284,
      -1.066346526145935,
      -0.19592738151550293,
    ]),
    list([
      0.17051002383232117,
      -1.7759748697280884,
      -0.12025851756334305,
    ]),
  ])
# ---
# name: test_npse_iid_inference_snapshot[jac_gauss-sde-uniform_prior-dim_3-vp]
  list([
    list([
      0.0633796900510788,
      -1.141589641571045,
      -0.11582185328006744,
    ]),
    list([
      0.42771634459495544,
      -0.5370681881904602,
      0.23705551028251648,
    ]),
  ])
# ---
